@@ -1,3 +1,9 @@
+2007-01-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_dev/src/RemoteControlBoard.cpp: make sure
+	velocity interface can be used independently of position
+	interface.
+
 2007-01-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/HttpCarrier.cpp: support for "post" form
